tests/paczka1/fuzzy1/46587604.err
Error in line 1: kB0sCPerXi A971 27,7
Error in line 8: kB0sCPerXi A971 69,4
Error in line 12: WiDFvRy7C5y S975 71,4
Error in line 20: WiDFvRy7C5y S656 81,9
Error in line 25: kB0sCPerXi S975 53,5
Error in line 29: kB0sCPerXi S656 90,5
Error in line 24: YfiJ S975 40,9
Error in line 36: WiDFvRy7C5y A518 93,6
